# GENIE

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README_PyPI.md  pyproject.toml
.github/workflows/: build_python_wheels.yml  test_macos.yml  test_ubuntu.yml
FLEX/: CMakeLists.txt  LICENSE  README.md  environment.yml  requirements.txt
FLEX/example/: bin.pheno  cont.pheno  gene.annot  gene.bim  gene.fam  null.pheno  output.txt  test.sh
FLEX/example/cond_test_output/: all_continuous_2.tsv  coefs.txt  dofs.txt
FLEX/example/summ_h2_output/: gene.cont.pheno.glm.linear  gene.null.pheno.glm.linear
FLEX/include/: arguments.h  matmult.h  printable.h  std.h
FLEX/src/: flex_cond_test.py  flex_h2.cpp  matmult.cpp  regional_her.py
FLEX/src/flex_summ_h2/: flex_summ_h2.py  ldscore.py  main.py  sumstats.py  trace.py
example/: .MN  .trace  config.g.txt  config.gxe.txt  config.txt  multi.annot  param.txt  test.2.out  test.2.out.MN  test.2.out.tr  test.2.pheno  test.2.trace.out  test.env  test.mem.out  test.mem.out.MN  test.mem.out.tr  test.out  test.out.MN  test.out.trace  test.out.txt  test.out.wgxsum  test.out.ysum  test.sh  test.temp.out  test.temp.out.trace
example/logs/log.2024-07-07.12.05/: log.cov.mem-0  log.cov.mem-1  log.cov.mem-2  log.multi.cov.mem-0  log.multi.cov.mem-1  log.multi.cov.mem-2  log.multi.nocov.mem-0  log.multi.nocov.mem-1  log.multi.nocov.mem-2  log.nocov.mem-0  log.nocov.mem-1  log.nocov.mem-2
example/logs/log.2024-07-07.12.22/: log.cov.mem-0  log.cov.mem-1  log.cov.mem-2  log.multi.cov.mem-0  log.multi.cov.mem-1  log.multi.cov.mem-2  log.multi.nocov.mem-0  log.multi.nocov.mem-1  log.multi.nocov.mem-2  log.nocov.mem-0  log.nocov.mem-1  log.nocov.mem-2
example/logs/log.2024-07-07.12.23/: log.cov.mem-0  log.cov.mem-1  log.cov.mem-2  log.multi.cov.mem-0  log.multi.cov.mem-1  log.multi.cov.mem-2  log.multi.nocov.mem-0  log.multi.nocov.mem-1  log.multi.nocov.mem-2  log.nocov.mem-0  log.nocov.mem-1  log.nocov.mem-2
figure_data/: RUNNING_TIME.txt  trait_info_new.csv
figure_data/GxE.tissue_figures/: order.txt
figure_data/GxE.tissue_figures/all.outs/out.gxage/: all.g.Over.txt  all.g.noOver.txt  all.gxe.Over.txt
figure_data/GxE.tissue_figures/all.outs/out.gxsex/: all.g.Over.txt  analysed.phen.txt
figure_data/GxE.tissue_figures/all.outs/out.gxsmok/: all.g.noOver.txt  all.gxe.noOver.txt
figure_data/GxE.tissue_figures/all.outs/out.gxstatin/: all.g.noOver.txt  all.gxe.Over.txt  all.gxe.noOver.txt
figure_data/array_snps/: all.smok.bin.flip.txt  all.smok.norm.flip.txt  all.statin.bin.def.txt  all.statin.norm.flip.txt
figure_data/imp_snps/mafld/: imp.mafld.gxsmok.txt
figure_data/model_basic_NxE/sex/: sex.basic.flip.txt  sex.full.def.txt
figure_data/model_basic_NxE/smok/: all.smok.norm.lev3.txt
figure_data/model_basic_NxE/statin/: gxe.basic.model.txt
figure_data/num_random_vec/: all.h2.b10.txt  all.h2.b100.txt
figure_data/permute_test/sex/: basic.permute.P.txt  full.permute.E.txt  full.permute.G.txt  full.permute.P.txt
figure_data/permute_test/smok/: basic.permute.E.txt  basic.permute.G.txt  full.permute.G.txt
figure_data/revision/: benchmark_results_filtered_geno.csv  benchmark_results_filtered_geno_discrete.csv  benchmark_results_fpr_adj.csv  benchmark_runtime.csv  bp_diastolic_results.csv  bp_systolic_results.csv  cholesterol_adj_results.csv  cholesterol_results.csv  estimated_SE_vs_true_SE_summary_sample_size.csv  estimated_vs_true_SE.csv  genie_results_env_age.csv  genie_results_env_sex.csv  genie_results_env_smok.csv  genie_results_env_statin.csv  ldl_adj_results.csv  ldl_results.csv  ldsc_50_traits_results.csv  power_vary_h2gxe_values.csv  rand_SE_sample_size.csv  sample_size_power_results_no_nxe.csv  simul_missing_env_results.csv  simul_missing_pheno_results.csv  stratified_by_sex_age.csv
figure_data/simul.nxe/: fig2a.txt  fig2b.txt  figS3ab.txt
figure_data/simul/nxe.effect/: no.nxe.set1.gxe.fixef.txt  no.nxe.set1.gxe.txt  no.nxe.set2.gxe.fixef.txt  no.nxe.set2.gxe.txt  no.nxe.set3.gxe.fixef.txt  no.nxe.set3.gxe.txt  no.nxe.set4.gxe.fixef.txt  no.nxe.set4.gxe.txt  yes.nxe.set1.gxe.txt  yes.nxe.set2.gxe.txt  yes.nxe.set3.gxe.txt  yes.nxe.set4.gxe.txt
figure_data/simul/nxe.effect/small.scale/: genie.gxe.set0.txt  genie.gxe.set1.txt  genie.gxe.set2.txt  genie.gxe.set3.txt  lemma.gxe.set0.txt  lemma.gxe.set1.txt  lemma.gxe.set2.txt  (+5 more)
figure_data/tissue/: gxsex.tissue.txt  gxsmok.tissue.txt  gxstatin.tissue.txt
include/: arguments.h  arguments.h~  auxillary.h  auxillary.h~  functions.h  genomult.h  genomult.h~  genotype.h  genotype.h~  helper.h  io.h  mailman.h  matmult.h  matmult.h~  sample_matching.h  statsfn.h  statsfn.h~  std.h  validation.h  vectorfn.h  vectorfn.h~
results/: README.md
results/info/: tissue_info.csv
results/real_data/array_snps/: all.age.norm.txt  all.sex.bin.def.txt  all.sex.bin.flip.txt  all.sex.norm.def.txt  all.sex.norm.flip.txt  all.smok.bin.def.txt  all.smok.norm.def.txt  all.statin.bin.flip.txt  all.statin.norm.def.txt
results/real_data/med_adjust/: bp_diastolic_adj_results.tsv  bp_systolic_adj_results.tsv  multi_env_results.tsv  tissue.cholesterol.adj.age.tsv
results/simulation/benchmark/: benchmark_results.tsv
results/simulation/jackknife_SE_vs_true_SE/: estimated_SE_vs_true_SE_summary.tsv  estimated_SE_vs_true_SE_summary_gxe.tsv  estimated_vs_true_SE_no_nxe.tsv
results/simulation/power/: power_vary_h2gxe.tsv  sample_size_power_results.tsv
results/simulation/rand_impact/: compare_w_exactMoM.rand_SE.tsv  rand_vec_10_100.tsv
results/simulation/robustness/: various_conditions_results.tsv
src/: .ge_hetro.cpp.swn  .ge_hetro.cpp.swo  .ge_hetro.cpp.swp  auxillary.cpp  functions.cpp  ge_flexible.cpp  ge_flexible_multi_pheno.cpp  ge_hetro.cpp  ge_hetro_flexible.cpp  ge_hetro_flexible_multi_pheno.cpp  ge_hetro_flexible_multi_pheno_trace_step1.cpp  ge_hetro_flexible_multi_pheno_trace_step2.cpp  ge_mem_eff.cpp  ge_mem_flexible.cpp  genomult.cpp  genotype.cpp  matmult.cpp  sample_matching.cpp  storage.cpp  updates.tgz
src/rhe/: __init__.py  runner.py
test/: test.py
(+32 files in other folders)
